--- a/AutoService/App.config
+++ b/AutoService/App.config
@@ -7,7 +7,7 @@
     </configSections>
     <connectionStrings>
         <add name="AutoService.Properties.Settings.AutoSerciceConnectionString"
-            connectionString="Data Source=DESKTOP-MO5HLC4\SQLEXPRESS;Initial Catalog=AutoSercice;Integrated Security=True"
+            connectionString="Data Source=DESKTOP-MO5HLC4\SQLEXPRESS;Initial Catalog=AutoServis;Integrated Security=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
@@ -25,7 +25,7 @@
                 <value>False</value>
             </setting>
             <setting name="conn" serializeAs="String">
-                <value>Data Source=DESKTOP-MO5HLC4\SQLEXPRESS; Initial Catalog = AutoSercice; Integrated Security=True;</value>
+                <value>Data Source=DESKTOP-MO5HLC4\SQLEXPRESS; Initial Catalog = AutoServis; Integrated Security=True;</value>
             </setting>
             <setting name="SecretKey" serializeAs="String">
                 <value>Gorkem</value>
