--- a/AutoService/Properties/Settings.settings
+++ b/AutoService/Properties/Settings.settings
@@ -12,7 +12,7 @@
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="conn" Type="System.String" Scope="User">
-      <Value Profile="(Default)">Data Source=DESKTOP-MO5HLC4\SQLEXPRESS; Initial Catalog = AutoSercice; Integrated Security=True;</Value>
+      <Value Profile="(Default)">Data Source=DESKTOP-MO5HLC4\SQLEXPRESS; Initial Catalog = AutoServis; Integrated Security=True;</Value>
     </Setting>
     <Setting Name="SecretKey" Type="System.String" Scope="User">
       <Value Profile="(Default)">Gorkem</Value>
@@ -20,10 +20,10 @@
     <Setting Name="AutoSerciceConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"&gt;
-  &lt;ConnectionString&gt;Data Source=DESKTOP-MO5HLC4\SQLEXPRESS;Initial Catalog=AutoSercice;Integrated Security=True&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=DESKTOP-MO5HLC4\SQLEXPRESS;Initial Catalog=AutoServis;Integrated Security=True&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=DESKTOP-MO5HLC4\SQLEXPRESS;Initial Catalog=AutoSercice;Integrated Security=True</Value>
+      <Value Profile="(Default)">Data Source=DESKTOP-MO5HLC4\SQLEXPRESS;Initial Catalog=AutoServis;Integrated Security=True</Value>
     </Setting>
   </Settings>
 </SettingsFile>
